test/2/scope/undefined-sym.err
test/2/scope/undefined-sym.ploy:2:3-12: scope error: `undefined` is not defined in this scope.
|   undefined
    ~~~~~~~~~
